cleanup elo code (#235)